--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://gitpubsheff.github.io/gitpubsheff
+url: http://gitpubsheff.github.io
 title: GitPub
 subtitle: Geeks in the Pub
 simple_search: http://google.com/search
@@ -22,10 +22,10 @@ subscribe_rss: /gitpubsheff/atom.xml
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /gitpubsheff
+root: /
 permalink: /blog/:year/:month/:day/:title/
 source: source
-destination: public/gitpubsheff
+destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
